--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,28 +1,31 @@
-<footer class="pt-4 pb-[70px] text-sm">
-  <div>
-    Hosts:{" "}
-    <a href="https://twitter.com/nayafia">
-      Nadia Asparouhova
-    </a>{" "}
-    &{" "}
-    <a href="https://twitter.com/left_pad">
-      Henry Zhu
-    </a>
-  </div>
-  <div>
-    Cover Art: Jessica Han | Music:{" "}
-    <a href="https://twitter.com/ken_wheeler">
-      Ken Wheeler
-    </a>
-  </div>
-  <div>
-    Supported via{" "}
-    <a 
-      href="https://github.com/sponsors/hzoo"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      GitHub Sponsors
-    </a>
+<footer class="pt-6 pb-[80px] text-sm text-his-text-secondary border-t border-his-hr/50">
+  <div class="space-y-1.5">
+    <p>
+      Hosts:{" "}
+      <a href="https://twitter.com/nayafia" class="text-his-text hover:text-his-green transition-colors">
+        Nadia Asparouhova
+      </a>{" "}
+      &{" "}
+      <a href="https://twitter.com/left_pad" class="text-his-text hover:text-his-green transition-colors">
+        Henry Zhu
+      </a>
+    </p>
+    <p>
+      Cover Art: Jessica Han | Music:{" "}
+      <a href="https://twitter.com/ken_wheeler" class="text-his-text hover:text-his-green transition-colors">
+        Ken Wheeler
+      </a>
+    </p>
+    <p>
+      Supported via{" "}
+      <a
+        href="https://github.com/sponsors/hzoo"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="text-his-green hover:underline"
+      >
+        GitHub Sponsors
+      </a>
+    </p>
   </div>
 </footer>
