update footer links, enhance main component taglines with animations, and add fadeIn keyframes to CSS

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,9 +15,9 @@
       <div class="space-y-1.5">
         <p class="text-sm font-medium text-his-text">
           Hosts:{" "}
-          <a href="https://twitter.com/nayafia" class="hover:text-his-green transition-colors border-b border-his-green/10 hover:border-his-green">Nadia Asparouhova</a> 
+          <a href="https://twitter.com/nayafia" class="hover:text-his-green transition-colors border-b border-his-green/10 hover:border-his-green">Nadia</a>
           &{" "}
-          <a href="https://twitter.com/left_pad" class="hover:text-his-green transition-colors border-b border-his-green/10 hover:border-his-green">Henry Zhu</a>
+          <a href="https://twitter.com/left_pad" class="hover:text-his-green transition-colors border-b border-his-green/10 hover:border-his-green">Henry</a>
         </p>
         <p class="text-xs text-his-text-secondary leading-loose">
           Cover Art: <span class="text-his-text-tertiary">Jessica Han</span> • Music: <a href="https://twitter.com/ken_wheeler" class="hover:text-his-green transition-colors">Ken Wheeler</a>
