--- a/src/components/Subscribe.astro
+++ b/src/components/Subscribe.astro
@@ -27,6 +27,7 @@ import { hisMetadata } from "@/metadata.ts";
     <span>Spotify</span>
   </a>
 
+  <!-- YouTube link commented out until channel is ready
   <a
     href={hisMetadata.youtube}
     target="_blank"
@@ -38,6 +39,7 @@ import { hisMetadata } from "@/metadata.ts";
     </svg>
     <span>YouTube</span>
   </a>
+  -->
 
   <a
     href={hisMetadata.rss}
