--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
-import HomeLayout from '@/layouts/HomeLayout.astro';
+import Layout from '@/layouts/Layout.astro';
 import Main from '@/components/Main.astro';
-import '../styles/base.css';
 ---
-<HomeLayout>
+<Layout>
     <Main />
-</HomeLayout>
+</Layout>
