fix mobile, toggle sidebar btn

--- a/src/components/AudioPlayer.astro
+++ b/src/components/AudioPlayer.astro
@@ -3,10 +3,10 @@ const { src } = Astro.props;
 ---
 
 <div
-  class="fixed bottom-4 left-1/2 lg:left-[calc(50%+160px)] z-40 w-[calc(100%-2rem)] max-w-xl -translate-x-1/2 rounded-2xl border border-his-text-tertiary/50 bg-his-hover/95 text-his-text backdrop-blur-sm"
+  class="fixed bottom-3 sm:bottom-4 left-1/2 lg:left-[calc(50%+160px)] z-40 w-[calc(100%-1.5rem)] sm:w-[calc(100%-2rem)] max-w-xl -translate-x-1/2 rounded-2xl border border-his-text-tertiary/50 bg-his-hover/95 text-his-text backdrop-blur-sm"
 >
-  <div class="px-4 py-3">
-    <div class="flex items-center gap-4">
+  <div class="px-3 sm:px-4 py-2.5 sm:py-3">
+    <div class="flex items-center gap-2 sm:gap-4">
       <button
         id="play-pause"
         class="flex h-10 w-10 items-center justify-center rounded-xl bg-his-green/10 text-his-green transition-all duration-200 hover:bg-his-green/20 hover:opacity-80 focus:outline-none"
