--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
-<footer class="pt-16 pb-[100px] text-center border-t border-his-hr/30">
-  <div class="max-w-xl mx-auto px-6">
+<footer class="pt-12 sm:pt-16 pb-24 sm:pb-[100px] text-center border-t border-his-hr/30">
+  <div class="max-w-xl mx-auto px-3 sm:px-6">
     <!-- Sprout Motif -->
     <div class="mb-8 flex justify-center">
       <svg class="w-12 h-12 text-his-green opacity-40 transition-opacity hover:opacity-100 duration-1000" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
