--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -46,7 +46,7 @@ const episodeNumbers = new Map(
 
 ---
 
-<div class="mx-auto px-5 py-7 flex flex-col lg:flex-row lg:max-w-6xl">
+<div class="mx-auto px-3 sm:px-5 py-5 sm:py-7 flex flex-col lg:flex-row lg:max-w-6xl">
     <div class="lg:mr-4 flex-grow-0 flex-shrink-0 basis-[500px]">
         <div class="lg:fixed lg:top-1/2 lg:-translate-y-1/2">
             <div class="flex flex-col items-center text-center max-w-[472px] mx-auto">
@@ -98,7 +98,7 @@ const episodeNumbers = new Map(
                         {episodesBySeasons[season].map((episode) => {
                             const epNumber = episodeNumbers.get(episode.slug);
                             return (
-                            <article class="group relative px-4 py-3 rounded-xl border border-transparent hover:border-his-hr hover:bg-his-hover/50 transition-all duration-200">
+                            <article class="group relative px-3 sm:px-4 py-3 rounded-xl border border-transparent hover:border-his-hr hover:bg-his-hover/50 transition-all duration-200">
                                 <a href={`/${episode.slug}`} class="block" data-astro-prefetch="hover">
                                     <h3 class="text-lg font-medium group-hover:text-his-green transition-colors pr-12">
                                         {episode.data.title}
